test/bad/occur.ml
program

let rec f x = f in f

